--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <img src="images/door.jpg" alt="My test image" id="door">
     <button><p>Change Users</p></button>
     <script src="scripts/main.js"></script>
+    <iframe src="https://www.google.com/maps/d/embed?mid=196xBtntJyhByVJzADCDbEAg74KQEPBos" width="640" height="480"></iframe>
   </body>
 </html>
